# child_game_comuter_vision

./: CMakeLists.txt  README.md  main.cpp  match_pict.cpp  match_pict.h  select_foregound.cpp
